# Research-TongaML-SlabUpperInterface

./: .gitignore  README.md  pyproject.toml  run.py  tonga_slab_interface.nc
.devcontainer/: Dockerfile  devcontainer.json
data/catalog/: catalog.csv
data/manual_modify/: extra_fit.csv  slab_fit.csv  temp.csv
data/slab2/: ker_slab1.0_clip.grd
src/: __init__.py  config.py  figure.py  fit.py  logger_config.py  manual_fit.py  smooth_slab.py  utils.py
